# Thesis-Codes

./: General Guidelines 2  Perching Trajecotory V2.cs  Perching Trajecotory V3.cs  Perching Trajecotory V4.cs  Perching Trajectory Final.cs  Ros Waypoint Follower.cs  TGV2P1.py  TGV2P2.py  ToDo.txt  TrajectoryGeneration.py  TrajectoryGeneration2.py  TrajectoryGeneration3.py  TrajectoryGeneration4.py  TrajectoryGeneration5.py  TrajectoryGeneration6.py  Varying_k.py  drone_target_publisher.py  drone_target_publisher2.py  dronepath.csv  plot_drone_paths.py  rescuepoint_follower.py  trajectory_analysis.py  tutorial1.py
auv_detection/: auv_detection.py  auv_detection2.py  auv_detection3.py  auv_detection4.py  auv_detection_a.py  different_filters.py  run_yolo11.py
auv_detection/real_data_obb/real_data_obb/: Train.txt  data.yaml
auv_detection/real_data_obb/real_data_obb/labels/: train.cache  val.cache
auv_detection/real_data_obb/real_data_obb/labels/train/: run10_frame_10.txt  run10_frame_17.txt  run10_frame_24.txt  run10_frame_31.txt  run10_frame_52.txt  run10_frame_59.txt  run10_frame_66.txt  run10_frame_73.txt  run11_frame_18.txt  run11_frame_25.txt  run11_frame_39.txt  run11_frame_46.txt  run11_frame_53.txt  run12_frame_5.txt  (+117 more)
auv_detection/runs/train/real_obb_small/: args.yaml  results.csv
auv_detection/sim_data_obb/sim_data_obb/labels/: train.cache  val.cache
go_to_rescuepoint/: LICENSE  package.xml  setup.cfg  setup.py
go_to_rescuepoint/go_to_rescuepoint/: rescuepoint_follower.py  rescuepoint_follower2.py  rescuepoint_follower_client.py  rescuepoint_server.py
(+288 files in other folders)
